methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:7: error: reassignment to val
      vuBiscuit = vuBiscuit +1
                ^